--- a/main.html
+++ b/main.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="description" content="BigPictureTeam Description">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Hogyun">
-    <title>Bigpicture.team</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta name="description" content="BigPictureTeam Description">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Hogyun">
+  <title>Bigpicture.team</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#services">SERVICES</a></li>
-                    <li><a href="#portfolio">PORTFOLIO</a></li>
-                    <li><a href="#pricing">PRICING</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</body>
-<script src="./src/app.js"></script>
+  <!-- Nav bar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top top-radius">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="#about" style="color: white">About</a></li>
+          <li><a href="#services" style="color: white">Services</a></li>
+          <li><a href="#portfolio" style="color: white">Portfolio</a></li>
+          <li><a href="#pricing" style="color: white">Culture</a></li>
+          <li><a href="#contact" style="color: white">Contact us</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Title -->
+  <div class="container">
+    <div class="row margin">
+      <div class="col-sm-1"></div>
+      <div class="col-sm-10">
+        <img class="logo" src="./src/js/back.jpg" alt="">
+      </div>
+    </div>
+  </div>
+  <!-- Content -->
+  <div class="container">
+    <div class="row">
+      <div class="here col-sm-12">
 
-</html>
+    </div>
+  </div>
+
+
+    <nav class="navbar navbar-inverse bottom-radius">
+      <div class="container">
+        <div class="navbar-header">
+          <img src="logo" alt="">
+        </div>
+        <h1>Copyright @ 2015 BigPictureTeam</h1>
+      </div>
+    </nav>
+  </body>
+  <script src="./src/app.js"></script>
+
+  </html>
